Start setting up automatic docs

--- a/docs/components/SimpleScene.mdx
+++ b/docs/components/SimpleScene.mdx
@@ -1,4 +1,49 @@
-## Let's create a 3D world! 🌍
+ > A basic 3D [scene](https://threejs.org/docs/#api/en/scenes/Scene) to add objects hierarchically.
+
+**Extends**:
+
+- [`Component<THREE.Scene>`](*)
+
+**Implements**
+
+- [`Disposable`](*)
+
+___
+### constructor
+
+`constructor(components: Components)`
+
+___
+### enabled
+
+`enabled: boolean`
+
+> Whether it's enabled or not.
+
+___
+### name
+
+`name: string`
+
+> {@link Component.name}
+
+___
+### get
+
+`get(example: any): THREE.Scene`
+
+> {@link Component.get}
+
+___
+### dispose
+
+`dispose(): void`
+
+> {@link Disposable.dispose}
+
+___
+
+## Tutorial
 The `SimpleScene` component is the easiest way to create a 3D space to start working.
 Let's start by importing Components and Three.js:
 
