--- a/docs/Tutorials/SimpleScene.mdx
+++ b/docs/Tutorials/SimpleScene.mdx
@@ -1,49 +1,4 @@
- > A basic 3D [scene](https://threejs.org/docs/#api/en/scenes/Scene) to add objects hierarchically.
-
-**Extends**:
-
-- [`Component<THREE.Scene>`](*)
-
-**Implements**
-
-- [`Disposable`](*)
-
-___
-### constructor
-
-`constructor(components: Components)`
-
-___
-### enabled
-
-`enabled: boolean`
-
-> Whether it's enabled or not.
-
-___
-### name
-
-`name: string`
-
-> {@link Component.name}
-
-___
-### get
-
-`get(example: any): THREE.Scene`
-
-> {@link Component.get}
-
-___
-### dispose
-
-`dispose(): void`
-
-> {@link Disposable.dispose}
-
-___
-
-## Tutorial
+## Let's create a 3D world! 🌍
 The `SimpleScene` component is the easiest way to create a 3D space to start working.
 Let's start by importing Components and Three.js:
 
@@ -59,7 +14,7 @@ const container = document.getElementById('container');
 ```
 Next, we will instantiate the main object of the library: `Components`. 🔥
 
-  
+
   <iframe src="https://ifcjs.github.io/components/src/core/SimpleScene/index.html"></iframe>
-  
+
   
