--- a/docs/Tutorials/SimpleScene.mdx
+++ b/docs/Tutorials/SimpleScene.mdx
@@ -21,7 +21,7 @@ HTML div element. However you do it, as long as you get a reference
 in your code, you are good to go!
 :::
 ### Setting up a components project 🧰
-Next, we will instantiate the main object of the library: [Components](../api/classes/components.Components). 🤖
+Next, we will instantiate the main object of the library: **[Components](../api/classes/components.Components)**. 🤖
 This object will keep track of all the components that you create, making them
 easily accessible in all your application and making sure to update them
 in each frame, so you don't have to worry about that. 💪
