--- a/docs/Tutorials/ToolsComponent.mdx
+++ b/docs/Tutorials/ToolsComponent.mdx
@@ -29,7 +29,7 @@ Now, getting the SimpleGrid component back is as easy as using the `get()` metho
 component as an argument. That's it! 👇
 
 ```js
-const grid = components.tools.get("SimpleGrid");
+const savedGrid = components.tools.get("SimpleGrid");
 ```
 :::info Clean code, clean memory 🧹
 The tools component also keeps track of the memory usage of the components and automatically cleans it for you when
@@ -64,7 +64,9 @@ const CustomComponent = await components.tools.use(token, id);
 const component = new CustomComponent();
 component.greet();
 ```
-Fantastic work! 🎉🎉🎉 Now you know how to keep your components tidy, and also get your components from the cloud.
+Fantastic work! 🎉🎉🎉 Now you know how to keep your components tidy and how to get them from the cloud. Another
+step forward in your journey to build your own BIM software. 🥳 Don't forget to check out That Open Platform if
+you haven't already!
 
 
   <iframe src="https://ifcjs.github.io/components/src/core/ToolsComponent/index.html"></iframe>
