Update docs styles

--- a/docs/Tutorials/ToolsComponent.mdx
+++ b/docs/Tutorials/ToolsComponent.mdx
@@ -20,7 +20,7 @@ const grid = new OBC.SimpleGrid(components);
 Now, it is likely that your application will have many menus. What if you need access to this component In many
 places? For example, you may have a menu that controls the color and size of the grid, and other menus that goes
 into floor plan navigation mode and need to hide the grid.
-To solve this situation, you just need to add the SimpleGrid component to the ToolsComponent. That's it!
+To solve this situation, you just need to add the SimpleGrid component to the ToolComponent. That's it!
 
 ```js
 components.tools.add(grid);
@@ -40,7 +40,7 @@ you call `components.dispose()`,
 ___
 Maybe you have uploaded some components to That Open Platform and want to easily share them with someone. Or maybe you
 have got some nice components in the Marketplace and want to use them in your app. Either way, using these components
-is a piece of cake with ToolsComponent!
+is a piece of cake with ToolComponent!
 :::tip What's That Open Platform?
 That Open Platform is a place where people can share, buy and sell their components for free. You can learn more about
 how to get started [right here](../that-open-platform/getting-started.mdx).
