Update docs build

--- a/docs/Tutorials/SimpleDimensions.mdx
+++ b/docs/Tutorials/SimpleDimensions.mdx
@@ -28,7 +28,7 @@ scene.add(redCube);
 components.meshes.push(redCube);
 ```
 :::info Collection of Meshes
-📦 **[components.meshes](../api/classes/components.meshes)** keeps all your meshes including IFC Models, Fragments in
+📦 **Components.meshes** keeps all your meshes including IFC Models, Fragments in
 one place.
 :::
 ### 🛠️ Creating Dimension Tool
