--- a/docs/Tutorials/ScreenCuller.mdx
+++ b/docs/Tutorials/ScreenCuller.mdx
@@ -47,11 +47,58 @@ const cubes = [];
 const geometry = new THREE.BoxGeometry(2, 2, 2);
 const material = new THREE.MeshLambertMaterial({ color: 'red' });
 ```
-#### 🌌 Rendering Multiple Cubes
+#### 🧪 Generate Multiple Cubes
 Now, using the `getRandomNumber()` method we previously created, we will add the 300 **`cube`** meshes to our scene
 and randomly position them. We'll add the cube to the scene and adjust its position between 0 and 10.
 Additionally, we will add meshes to the `culler` object, which will help **SimpleCuller** to recognize and
 draw the elements that are visible to the camera. To do this, **`culler.add(cube)`** will be used.
+
+```js
+function regenerateCubes() {
+resetCubes();
+for (let i = 0; i < 300; i++) {
+const cube = new THREE.Mesh(geometry, material);
+cube.position.x = getRandomNumber(10);
+cube.position.y = getRandomNumber(10);
+cube.position.z = getRandomNumber(10);
+cube.updateMatrix();
+scene.add(cube);
+culler.add(cube);
+cubes.push(cube);
+}
+}
+```
+#### 🧹 Cleaning the Scene
+Now that we know how to create multiple cubes, we will write a function to remove the cubes from scene on demand.
+`resetCubes()` iteratively removes the **cubes** using [**`cube.removeFromParent`**](https://threejs.org/docs/index.html?q=obje#api/en/core/Object3D.removeFromParent).
+
+```js
+function resetCubes() {
+for (const cube of cubes) {
+cube.removeFromParent();
+}
+cubes.length = 0;
+}
+```
+#### 📢 Rendering Cubes
+With everything ready, we will call `regenerateCubes()` which will generate cubes and add them to scene.
+
+```js
+regenerateCubes();
+```
+Here comes the most crucial part! The core aim of **ScreenCuller** is to output just those components that are
+visible to the camera.
+`culler.needsUpdate = true` instructs the ScreenCuller to render the updated view.
+** Remember to update culler every time the camera is updated ❕ **
+For this tutorial, we are updating the culler on the click of button. 🖱
+
+```js
+culler.needsUpdate = true;
+```
+Great job! 🎉 Now you know how to optimise your 3D scene using a
+**Screen Culler** component! 💪
+Your BIM app will now have unmatched performance and can render huge scenes easily. 🚀
+Let's keep it up and check out another tutorials!
 
 
   <iframe src="https://ifcjs.github.io/components/src/core/ScreenCuller/index.html"></iframe>
