Issue #12 - Update docs - highlighter.outlinesEnabled

--- a/docs/Tutorials/FragmentTree.mdx
+++ b/docs/Tutorials/FragmentTree.mdx
@@ -38,7 +38,7 @@ Now that highlighter setup is done, we will add a nice outline effect when the e
 
 ```js
 components.renderer.postproduction.customEffects.outlineEnabled = true;
-highlighter.outlinesEnabled = true;
+highlighter.outlineEnabled = true;
 highlighter.update();
 ```
 ### 🗂️ Strategically Classifying Fragments
