--- a/docs/Tutorials/IfcPropertiesProcessor.mdx
+++ b/docs/Tutorials/IfcPropertiesProcessor.mdx
@@ -17,7 +17,7 @@ model.properties = await properties.json();
 const highlighter = new OBC.FragmentHighlighter(components, fragments);
 highlighter.setup();
 components.renderer.postproduction.customEffects.outlineEnabled = true;
-highlighter.outlinesEnabled = true;
+highlighter.outlineEnabled = true;
 ```
 Next, we will create a new instance of the component to navigate
 IFC properties: the `IfcPropertiesProcessor`. We will also
