--- a/docs/Tutorials/FragmentHighlighter.mdx
+++ b/docs/Tutorials/FragmentHighlighter.mdx
@@ -30,7 +30,7 @@ const buffer = new Uint8Array(dataBlob);
 fragments.load(buffer);
 highlighter.update();
 components.renderer.postproduction.customEffects.outlineEnabled = true;
-highlighter.outlinesEnabled = true;
+highlighter.outlineEnabled = true;
 ```
 ### 🎨 Changing Highlight Appearance
 ---
